--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-body {
-  font-family: 'Montserrat', sans-serif;
-}
+body { font-family: 'Montserrat', sans-serif; }
 
 h1 {
   font-family: 'Montserrat', serif;
@@ -19,7 +17,7 @@ h2 {
 
 h3 { font-weight: bold; }
 
-.container-fluid { padding: 3% 20%; }
+.container-fluid { padding: 3% 15% 10%; }
 
 #title { background-color: #ff4c68; }
 
@@ -38,9 +36,21 @@ h3 { font-weight: bold; }
   font-weight: lighter;
 }
 
+.title-image {
+  /* margin-left: 13rem; */
+  transform: rotate(24deg);
+  position: absolute;
+  right: 22%;
+  width: 14%;
+}
+
 /* feature section */
 
-#features { padding: 8% 15% }
+#features {
+  padding: 8% 15%;
+  background-color: #fff;
+  position: relative;
+}
 
 .feature-icon {
   color: #ef8172;
@@ -74,3 +84,36 @@ h3 { font-weight: bold; }
   width: 14rem;
   margin: 2% 3%;
 }
+
+@media screen and (max-width: 980px) {
+  .title-image {
+    position: static;
+    transform: rotate(0);
+    width: 30%;
+    margin: 5% 0;
+  }
+
+  #title { text-align: center; }
+}
+
+/* cta section */
+#cta {
+  background-color: #ff4c68;
+  padding: 5% 3%;
+  text-align: center;
+}
+
+.cta-title {
+  color: #fff;
+  font-size: 2.5rem;
+  padding-bottom: 2%;
+}
+
+/* footer section */
+#footer {
+  text-align: center;
+  padding: 15% auto;
+  background-color: #fff;
+}
+
+.footer-icon { padding: 4% 1% 2%; }
